fix awkward nav spacing
it'd be nice if i could specify a minimum gap :/

--- a/docs/css/booklit.css
+++ b/docs/css/booklit.css
@@ -486,7 +486,6 @@ h3 {
 .top-nav ul li {
   margin: 0;
   padding: 0;
-  margin-right: 10px;
   margin-bottom: 10px;
 }
 .top-nav ul li:last-child {
