--- a/less/docs.less
+++ b/less/docs.less
@@ -25,7 +25,6 @@
     li {
       margin: 0;
       padding: 0;
-      margin-right: 10px;
       margin-bottom: 10px;
 
       &:last-child {
